fix overflow issue on windows when too many rows in upper table

--- a/production/src/modules/components/scss/env-connections/HomeScreenEnvConnections.scss
+++ b/production/src/modules/components/scss/env-connections/HomeScreenEnvConnections.scss
@@ -33,7 +33,7 @@
   color: $msdl-black;
   height: $env-connection-screen-height;
   padding: $env-connection-screen-padding;
-  overflow: auto;
+  overflow: overlay; // overlay prevents scrollbar from shifting content left
 
   // screen title
   &-title-row {
